<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    >

    <android.support.v7.widget.Toolbar android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"/>

    <TextView

        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLength="10"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="60sp"

        />


    <TextView

        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="30sp" />

    <GridLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="6"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        >


        <Button

            android:id="@+id/btn_MC"
            android:text="@string/MC_Button"
            style="@style/OperationalButtons"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_MPlus"
            android:text="@string/M_plus_Button"
            style="@style/OperationalButtons"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_MMinus"
            android:text="@string/M_Minus_Button"
            style="@style/OperationalButtons"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_MR"
            android:text="@string/MR_Button"
            style="@style/OperationalButtons"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_Clear"
            android:text="@string/Clear_Button"
            style="@style/OperationalButtons"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_PlusOrMinus"
            android:text="@string/PlusOrMinus_Button"
            style="@style/OperationalButtons"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_Division"
            android:text="@string/Division_Button"
            style="@style/OperationalButtons"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_Multiplication"
            android:text="@string/Multiplication_Button"
            style="@style/OperationalButtons"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_Seven"
            android:text="@string/Seven_Button"
            style="@style/FunctionalButtons"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />



        <Button

            android:id="@+id/btn_Eight"
            android:text="@string/Eight_Button"
            style="@style/FunctionalButtons"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_Nine"
            android:text="@string/Nine_Button"
            style="@style/FunctionalButtons"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_Minus"
            android:text="@string/Minus_Button"
            style="@style/OperationalButtons"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:minHeight="80dp"/>


        <Button

            android:id="@+id/btn_Four"
            android:text="@string/Four_Button"
            style="@style/FunctionalButtons"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />



        <Button

            android:id="@+id/btn_Five"
            android:text="@string/Five_Button"
            style="@style/FunctionalButtons"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_Six"
            android:text="@string/Six_Button"
            style="@style/FunctionalButtons"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_Addition"
            android:text="@string/Addition_Button"
            style="@style/OperationalButtons"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:minHeight="80dp"/>

        <Button

            android:id="@+id/btn_One"
            android:text="@string/One_Button"
            style="@style/FunctionalButtons"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />



        <Button

            android:id="@+id/btn_Two"
            android:text="@string/Two_Button"
            style="@style/FunctionalButtons"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />
        <Button

            android:id="@+id/btn_Three"
            android:text="@string/Three_Button"
            style="@style/FunctionalButtons"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button

            android:id="@+id/btn_EqualTo"
            style="@style/OperationalButtons"
            android:layout_height="172dp"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:text="@string/EqualTo_Button" />

        <Button

            android:id="@+id/btn_Zero"
            android:text="@string/Zero_Button"
            style="@style/FunctionalButtons"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:layout_columnWeight="2"
            android:layout_height="90dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <Button
            android:id="@+id/btn_Decimal"
            android:text="@string/Decimal_Button"
            style="@style/FunctionalButtons"
            android:layout_column="2"

            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="0"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

    </GridLayout>


</LinearLayout>
